@@ -373,13 +373,29 @@ void BaseGui::createActions() {
 	connect( doubleSpeedAct, SIGNAL(triggered()),
              core, SLOT(doubleSpeed()) );
 
-	decSpeedAct = new MyAction( Qt::Key_BracketLeft, this, "dec_speed" );
-	connect( decSpeedAct, SIGNAL(triggered()),
-             core, SLOT(decSpeed()) );
+	decSpeed10Act = new MyAction( Qt::Key_BracketLeft, this, "dec_speed" );
+	connect( decSpeed10Act, SIGNAL(triggered()),
+             core, SLOT(decSpeed10()) );
 
-	incSpeedAct = new MyAction( Qt::Key_BracketRight, this, "inc_speed" );
-	connect( incSpeedAct, SIGNAL(triggered()),
-             core, SLOT(incSpeed()) );
+	incSpeed10Act = new MyAction( Qt::Key_BracketRight, this, "inc_speed" );
+	connect( incSpeed10Act, SIGNAL(triggered()),
+             core, SLOT(incSpeed10()) );
+
+	decSpeed4Act = new MyAction( this, "dec_speed_4" );
+	connect( decSpeed4Act, SIGNAL(triggered()),
+             core, SLOT(decSpeed4()) );
+
+	incSpeed4Act = new MyAction( this, "inc_speed_4" );
+	connect( incSpeed4Act, SIGNAL(triggered()),
+             core, SLOT(incSpeed4()) );
+
+	decSpeed1Act = new MyAction( this, "dec_speed_1" );
+	connect( decSpeed1Act, SIGNAL(triggered()),
+             core, SLOT(decSpeed1()) );
+
+	incSpeed1Act = new MyAction( this, "inc_speed_1" );
+	connect( incSpeed1Act, SIGNAL(triggered()),
+             core, SLOT(incSpeed1()) );
 
 
 	// Menu Video
@@ -883,8 +899,12 @@ void BaseGui::setActionsEnabled(bool b) {
 	normalSpeedAct->setEnabled(b);
 	halveSpeedAct->setEnabled(b);
 	doubleSpeedAct->setEnabled(b);
-	decSpeedAct->setEnabled(b);
-	incSpeedAct->setEnabled(b);
+	decSpeed10Act->setEnabled(b);
+	incSpeed10Act->setEnabled(b);
+	decSpeed4Act->setEnabled(b);
+	incSpeed4Act->setEnabled(b);
+	decSpeed1Act->setEnabled(b);
+	incSpeed1Act->setEnabled(b);
 
 	// Menu Video
 	videoEqualizerAct->setEnabled(b);
@@ -1084,8 +1104,12 @@ void BaseGui::retranslateStrings() {
 	normalSpeedAct->change( tr("&Normal speed") );
 	halveSpeedAct->change( tr("&Halve speed") );
 	doubleSpeedAct->change( tr("&Double speed") );
-	decSpeedAct->change( tr("Speed &-10%") );
-	incSpeedAct->change( tr("Speed &+10%") );
+	decSpeed10Act->change( tr("Speed &-10%") );
+	incSpeed10Act->change( tr("Speed &+10%") );
+	decSpeed4Act->change( tr("Speed -&4%") );
+	incSpeed4Act->change( tr("&Speed +4%") );
+	decSpeed1Act->change( tr("Speed -&1%") );
+	incSpeed1Act->change( tr("S&peed +1%") );
 
 	// Menu Video
 	fullscreenAct->change( Images::icon("fullscreen"), tr("&Fullscreen") );
@@ -1645,10 +1669,18 @@ void BaseGui::createMenus() {
 	// Speed submenu
 	speed_menu = new QMenu(this);
 	speed_menu->addAction(normalSpeedAct);
+	speed_menu->addSeparator();
 	speed_menu->addAction(halveSpeedAct);
 	speed_menu->addAction(doubleSpeedAct);
-	speed_menu->addAction(decSpeedAct);
-	speed_menu->addAction(incSpeedAct);
+	speed_menu->addSeparator();
+	speed_menu->addAction(decSpeed10Act);
+	speed_menu->addAction(incSpeed10Act);
+	speed_menu->addSeparator();
+	speed_menu->addAction(decSpeed4Act);
+	speed_menu->addAction(incSpeed4Act);
+	speed_menu->addSeparator();
+	speed_menu->addAction(decSpeed1Act);
+	speed_menu->addAction(incSpeed1Act);
 
 	playMenu->addMenu(speed_menu);
 
