@@ -3,6 +3,8 @@
 (2008-08-25)
  * Added the Arabic translation, by Muhammad Nour Hajj Omar 
    <arabianheart@live.com>
+ * Added some options in menu Play->Speed to increase/decrease the
+   speed by 1% and 4%.
 
 (2008-08-24)
  * Fix: some of the actions passed to -actions may not work as expected
